--- a/data/config.json
+++ b/data/config.json
@@ -1,4 +1,11 @@
 {
   "port": 3000,
-  "baseUrl": "/"
+  "baseUrl": "/",
+  "mysql": {
+    "host": "localhost",
+    "port": 3306,
+    "user": "root",
+    "password": "admin123",
+    "database": "test"
+  }
 }
