--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   },
   "dependencies": {
     "@types/express": "^4.17.13",
+    "@types/mysql": "^2.15.21",
     "@typescript-eslint/eslint-plugin": "^5.26.0",
     "@typescript-eslint/parser": "^5.26.0",
     "eslint": "^8.16.0",
     "express": "^4.18.1",
+    "mysql": "^2.18.1",
     "ts-node": "^10.8.0",
     "typescript": "^4.7.2"
   },
