--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "build": "tsc"
   },
   "dependencies": {
+    "@types/cron": "^2.0.0",
     "@types/express": "^4.17.13",
     "@types/mysql": "^2.15.21",
     "@typescript-eslint/eslint-plugin": "^5.26.0",
     "@typescript-eslint/parser": "^5.26.0",
+    "cron": "^2.0.0",
     "eslint": "^8.16.0",
     "express": "^4.18.1",
     "mysql": "^2.18.1",
