--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "cron": "^2.0.0",
     "eslint": "^8.16.0",
     "express": "^4.18.1",
+    "log4js": "^6.5.1",
     "mysql": "^2.18.1",
     "ts-node": "^10.8.0",
     "typescript": "^4.7.2"
