--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "eslint": "^8.16.0",
     "express": "^4.18.1",
     "log4js": "^6.5.1",
+    "minecraft-server-util": "^5.2.9",
     "mysql": "^2.18.1",
     "ts-node": "^10.8.0",
     "typescript": "^4.7.2"
